// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feed actions:  Add feeds to state 1`] = `
Immutable.List [
  Immutable.Map {
    emailId: 1,
    unread: 1,
    date: 1515794888909,
    action: "opened",
    fileId: null,
    isFile: false,
    username: "jadams",
    id: 1,
  },
  Immutable.Map {
    emailId: 1,
    unread: 1,
    date: 1515794888909,
    action: "opened",
    fileId: null,
    isFile: false,
    username: "jadams",
    id: 2,
  },
  Immutable.Map {
    emailId: 1,
    unread: 1,
    date: 1515794888909,
    action: "opened",
    fileId: null,
    isFile: false,
    username: "jadams",
    id: 3,
  },
]
`;

exports[`Feed actions:  Remove feed by id 1`] = `
Immutable.List [
  Immutable.Map {
    emailId: 1,
    unread: 1,
    date: 1515794888909,
    action: "opened",
    fileId: null,
    isFile: false,
    username: "jadams",
    id: 1,
  },
  Immutable.Map {
    emailId: 1,
    unread: 1,
    date: 1515794888909,
    action: "opened",
    fileId: null,
    isFile: false,
    username: "jadams",
    id: 2,
  },
]
`;

exports[`Feed actions:  Update unread field by feed id 1`] = `
Immutable.List [
  Immutable.Map {
    emailId: 1,
    unread: 0,
    date: 1515794888909,
    action: "opened",
    fileId: null,
    isFile: false,
    username: "jadams",
    id: 1,
  },
  Immutable.Map {
    emailId: 1,
    unread: 1,
    date: 1515794888909,
    action: "opened",
    fileId: null,
    isFile: false,
    username: "jadams",
    id: 2,
  },
  Immutable.Map {
    emailId: 1,
    unread: 1,
    date: 1515794888909,
    action: "opened",
    fileId: null,
    isFile: false,
    username: "jadams",
    id: 3,
  },
]
`;
